@@ -8,8 +8,10 @@
 package com.powsybl.loadflow.validation;
 
 import java.io.Writer;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Objects;
 
+import com.powsybl.commons.PowsyblException;
 import com.powsybl.commons.config.ConfigurationException;
 import com.powsybl.loadflow.validation.io.ValidationWriter;
 import com.powsybl.loadflow.validation.io.ValidationWriterFactory;
@@ -32,10 +34,12 @@ public final class ValidationUtils {
         Objects.requireNonNull(writer);
         Objects.requireNonNull(validationType);
         try {
-            ValidationWriterFactory factory = config.getValidationOutputWriter().getValidationWriterFactory().newInstance();
+            ValidationWriterFactory factory = config.getValidationOutputWriter().getValidationWriterFactory().getDeclaredConstructor().newInstance();
             return factory.create(id, config.getTableFormatterFactory(), writer, config.isVerbose(), validationType, config.isCompareResults());
         } catch (InstantiationException | IllegalAccessException e) {
             throw new ConfigurationException(e);
+        } catch (InvocationTargetException | NoSuchMethodException e) {
+            throw new PowsyblException(e);
         }
     }
 
@@ -85,7 +89,7 @@ public final class ValidationUtils {
 
     public static boolean isMainComponent(ValidationConfig config, boolean mainComponent) {
         Objects.requireNonNull(config);
-        return config.isCheckMainComponentOnly() ? mainComponent : true;
+        return !config.isCheckMainComponentOnly() || mainComponent;
     }
 
 }
